# safe_stack

./: .clang-format  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
docs/: CMakeLists.txt  mainpage.md
include/safe_stack/: cache.h  expected.h  hash.h  safe_stack.h
src/: CMakeLists.txt  safe_stack.cpp
test/: CMakeLists.txt  cache_test.cpp  hash_test.cpp  safe_stack_test.cpp
